--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,35 @@
 {
     "compileOnSave": true,
     "compilerOptions": {
-        "outDir": "dist",
+        "rootDir": ".",
         "sourceMap": true,
         "target": "es2018",
-        "incremental": true,
-        "declaration": true,
-        "module": "commonjs",
         "noImplicitAny": true,
         "removeComments": true,
-        "esModuleInterop": true,
         "preserveConstEnums": true,
-        "emitDecoratorMetadata": true,
+        "incremental": true,
+        "module": "commonjs",
+        "esModuleInterop": true,
         "experimentalDecorators": true,
-        "baseUrl": "."
+        "emitDecoratorMetadata": true,
+        "declaration": true,
+        "outDir": "./dist",
+        "baseUrl": ".",
+        "paths": {
+            "@app/*": [ "app/*" ],
+            "@bootstrap/*": [ "bootstrap/*" ],
+            "@config/*": [ "config/*" ],
+            "@database/*": [ "database/*" ],
+            "@lib/*": [ "lib/*" ],
+            "@types/*": [ "@types/*" ]
+        }
     },
     "include": [
         "app/**/*.ts",
         "config/**/*.ts",
         "database/**/*.ts",
         "lib/**/*.ts",
-        "index.ts"
+        "app/routes/**/*.ts"
     ],
     "exclude": [
         "node_modules",
