--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.1",
     "@types/express-session": "^1.15.14",
     "@types/helmet": "0.0.44",
+    "@types/morgan": "^1.7.37",
     "@types/node": "^12.7.4",
     "@typescript-eslint/eslint-plugin": "^2.1.0",
     "@typescript-eslint/parser": "^2.1.0",
@@ -23,19 +24,20 @@
     "eslint": "^6.3.0",
     "eslint-plugin-node": "^10.0.0",
     "ts-node": "^8.3.0",
+    "ts-node-dev": "^1.0.0-pre.42",
     "tsconfig-paths": "^3.8.0",
     "typescript": "^3.6.2"
   },
   "dependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/csurf": "^1.9.35",
-    "@types/morgan": "^1.7.37",
     "config": "^3.2.2",
     "cookie-parser": "^1.4.4",
     "csurf": "^1.10.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "express-validator": "^6.2.0",
     "helmet": "^3.21.0",
     "morgan": "^1.9.1",
     "reflect-metadata": "^0.1.13",
