--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Boilerplate code for an Express Typescript Application",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "start": "cross-env NODE_ENV=production node -r tsconfig-paths/register dist/index.js",
     "start:dev": "ts-node -r tsconfig-paths/register index.ts",
     "start:prod": "cross-env NODE_ENV=production ts-node -r tsconfig-paths/register index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
