--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "express-boilerplate",
+  "author": "robert@currall.net",
   "version": "0.1.0",
   "description": "Boilerplate code for an Express Typescript Application",
   "main": "index.js",
@@ -8,9 +9,9 @@
     "start": "cross-env NODE_ENV=production node -r tsconfig-paths/register dist/index.js",
     "start:dev": "ts-node -r tsconfig-paths/register index.ts",
     "start:prod": "cross-env NODE_ENV=production ts-node -r tsconfig-paths/register index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "ts-node-dev -r tsconfig-paths/register index.ts"
   },
-  "author": "robert@currall.net",
   "license": "ISC",
   "devDependencies": {
     "@types/config": "0.0.34",
@@ -33,6 +34,7 @@
   "dependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/csurf": "^1.9.35",
+    "axios": "^0.19.0",
     "config": "^3.2.2",
     "cookie-parser": "^1.4.4",
     "csurf": "^1.10.0",
