--- a/package.json
+++ b/package.json
@@ -7,14 +7,23 @@
   "scripts": {
     "build": "tsc",
     "start": "cross-env NODE_ENV=production node -r tsconfig-paths/register dist/index.js",
-    "start:dev": "ts-node -r tsconfig-paths/register index.ts",
-    "start:prod": "cross-env NODE_ENV=production ts-node -r tsconfig-paths/register index.ts",
+    "lint": "eslint .",
+    "local:dev": "ts-node -r tsconfig-paths/register index.ts",
+    "local:prod": "cross-env NODE_ENV=production ts-node -r tsconfig-paths/register index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "ts-node-dev -r tsconfig-paths/register index.ts"
   },
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^6.3.0",
+    "eslint-plugin-node": "^10.0.0",
+    "ts-node": "^8.3.0",
+    "ts-node-dev": "^1.0.0-pre.42"
+  },
+  "dependencies": {
     "@types/config": "0.0.34",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/csurf": "^1.9.35",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
     "@types/express-session": "^1.15.14",
@@ -23,20 +32,10 @@
     "@types/node": "^12.7.4",
     "@typescript-eslint/eslint-plugin": "^2.1.0",
     "@typescript-eslint/parser": "^2.1.0",
-    "cross-env": "^5.2.1",
-    "eslint": "^6.3.0",
-    "eslint-plugin-node": "^10.0.0",
-    "ts-node": "^8.3.0",
-    "ts-node-dev": "^1.0.0-pre.42",
-    "tsconfig-paths": "^3.8.0",
-    "typescript": "^3.6.2"
-  },
-  "dependencies": {
-    "@types/cookie-parser": "^1.4.2",
-    "@types/csurf": "^1.9.35",
     "axios": "^0.19.0",
     "config": "^3.2.2",
     "cookie-parser": "^1.4.4",
+    "cross-env": "^5.2.1",
     "csurf": "^1.10.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
@@ -45,7 +44,9 @@
     "helmet": "^3.21.0",
     "morgan": "^1.9.1",
     "reflect-metadata": "^0.1.13",
+    "tsconfig-paths": "^3.8.0",
     "tsyringe": "^3.3.0",
+    "typescript": "^3.6.3",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.1.0"
   }
