--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/helmet": "0.0.44",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.7.4",
+    "@types/nunjucks": "^3.1.2",
     "@typescript-eslint/eslint-plugin": "^2.1.0",
     "@typescript-eslint/parser": "^2.1.0",
     "axios": "^0.19.0",
@@ -35,11 +36,13 @@
     "cross-env": "^5.2.1",
     "csurf": "^1.10.0",
     "dotenv": "^8.1.0",
+    "eslint-plugin-html": "^6.0.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "express-validator": "^6.2.0",
     "helmet": "^3.21.0",
     "morgan": "^1.9.1",
+    "nunjucks": "^3.2.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.4.1",
     "tsconfig-paths": "^3.8.0",
